--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product <Table></Table></title>
 </head>
 <body>
-    <h1>Product Table<Table></Table></h1>
-    <table border="3">
+   <table border="3">
+    <h1>Product Table</h1>
         <thead>
     <tr>
         <th>id</th>
@@ -55,5 +55,8 @@
         </td>
     </tbody>
     </table>
+    <marquee behavior="alternate" direction="right" scrollamount="15">
+        <H1>Offer Available until 30/12/2025</H1>
+    </marquee>
 </body>
 </html>
